--- a/services.html
+++ b/services.html
@@ -3,9 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git exercises | services</title>
+    <title>site of our services</title>
 </head>
 <body>
-    <h1>this is our services</h1>
+    <h1>quality services</h1>
+    <p>what we offer</p>
+    <ul>
+        <li>vontact</li>
+        <li>hire</li>
+    </ul>
 </body>
 </html>
