add old services

--- a/services.html
+++ b/services.html
@@ -6,6 +6,10 @@
     <title>Git exercises | services</title>
 </head>
 <body>
-    <h1>this is our services</h1>
+    <h1> our services</h1>
+    <ol>
+        <li>home</li>
+        <li>reign</li>
+    </ol>
 </body>
 </html>
