old services changes

--- a/services.html
+++ b/services.html
@@ -8,8 +8,8 @@
 <body>
     <h1> our services</h1>
     <ol>
-        <li>home</li>
-        <li>reign</li>
+        <li>info</li>
+        <li>all</li>
     </ol>
 </body>
 </html>
