old services changes

--- a/services.html
+++ b/services.html
@@ -6,10 +6,10 @@
     <title>Git exercises | services</title>
 </head>
 <body>
-    <h1> our services</h1>
+    <h1> our services hall</h1>
     <ol>
-        <li>info</li>
-        <li>all</li>
+        <li>menu</li>
+        <li>fail</li>
     </ol>
 </body>
 </html>
