--- a/services.html
+++ b/services.html
@@ -6,10 +6,12 @@
     <title>Git exercises | services</title>
 </head>
 <body>
-    <h1> our services hall</h1>
+    <h1> our services main</h1>
     <ol>
         <li>menu</li>
-        <li>fail</li>
+        <li>all</li>
+        <li>about</li>
+        <li>slash</li>
     </ol>
 </body>
 </html>
