add home page menu

--- a/home.html
+++ b/home.html
@@ -9,6 +9,11 @@
     <h1>home</h1>
     <div>
         this is content of home page
+        <ul>
+            <li>bar</li>
+            <li>help</li>
+            <li>menu</li>
+        </ul>
     </div>
 </body>
 </html>
