add home page paragraph

--- a/home.html
+++ b/home.html
@@ -6,8 +6,9 @@
     <title>my home page</title>
 </head>
 <body>
-    <h1>home</h1>
+    <h1>home bear</h1>
     <p>looking good house</p>
+    <p>design home</p>
     <div>
         this is content of home page
     </div>
