add home heading

--- a/home.html
+++ b/home.html
@@ -8,7 +8,8 @@
 <body>
     <h1>home bear</h1>
     <p>looking good house</p>
-    <p>design home</p>
+    <p>design looking</p>
+    <h2> home treatment </h2>
     <div>
         this is content of home page
     </div>
